Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -202,8 +202,7 @@
     }
    ],
    "source": [
-    "kindof_neighbors = None\n",
-    "kindof_neighbors = [2:5]"
+    "kindof_neighbors = None\n"
    ]
   },
   {
