--- a/index.ipynb
+++ b/index.ipynb
@@ -189,20 +189,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-1-4f1951edd2ec>, line 2)",
+     "evalue": "invalid syntax (<ipython-input-2-4be24ae03d54>, line 1)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-4f1951edd2ec>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    kindof_neighbors = [2:5]\u001b[0m\n\u001b[0m                         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-2-4be24ae03d54>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    kindof_neighbors = [2:5]\u001b[0m\n\u001b[0m                         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
-    "kindof_neighbors = None\n"
+    "kindof_neighbors = [2:5]"
    ]
   },
   {
