Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -131,7 +131,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "italy = countries[11]"
+    "italy = countries[len(c)]"
    ]
   },
   {
