--- a/index.ipynb
+++ b/index.ipynb
@@ -266,7 +266,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "countries."
+    "countries.remove(\"New Mexico\")\n"
    ]
   },
   {
